--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "cra-template-typescript": "1.2.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "^5.0.1",
     "resolve-url-loader": "^5.0.0",
+    "scss": "^0.2.4",
     "svgo": "^2.8.0",
     "web-vitals": "^4.2.4"
   },
@@ -42,6 +44,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/jest": "^29.5.14",
-    "@types/testing-library__react": "^10.0.1"
+    "@types/testing-library__react": "^10.0.1",
+    "sass": "^1.85.1"
   }
 }
