--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "svgo": "^2.8.0",
     "web-vitals": "^4.2.4"
   },
+  "proxy": "http://localhost:5001",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
